# flask-webauthn-demo

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml
app/: Dockerfile  Dockerfile.dev  app.py  entrypoint.dev.sh  entrypoint.sh  models.py  pyproject.toml
app/auth/: security.py  util.py  views.py
app/auth/templates/auth/: login.html  register.html  user_profile.html
app/auth/templates/auth/_partials/: email_login_message.html  register_credential.html  select_login.html  user_creation_form.html  username_form.html
app/auth/templates/auth/email/: login_email.html
app/migrations/versions/: 8a473eb9e801_create_user_and_credential_tables.py
app/static/: fonts.css  style.css
app/static-src/: package-lock.json  package.json  style.css  tailwind.config.js
app/static/fonts/: work-sans-v17-latin-700.eot
app/templates/: base.html  index.html
app/templates/_partials/: toasts.html
